--- a/spa/public/index.html
+++ b/spa/public/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacts Agenda</title>
   </head>
+  <style>
+    body, h1, ul {
+      margin: 0;
+    }
+    #webpack-spa-container {
+      height: 100vh;
+    }
+  </style>
   <body>
     <div id="webpack-spa-container"></div>
   </body>
